--- a/styles.css
+++ b/styles.css
@@ -150,10 +150,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-direction: column; */
     gap: 20px;
     padding: 20px;
-    /* background: #f1f1f1; */
 }
 
 .line{
@@ -259,10 +257,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-direction: column; */
     gap: 20px;
     padding: 20px;
-    /* background: #f1f1f1; */
 }
 
 .line{
@@ -476,15 +472,12 @@ body{
 }
 
 
-#pro-fitness-products{
+ #pro-fitness-products{
     display: flex;
-    justify-content: center;
     align-items: center;
-    /* flex-direction: column; */
     gap: 20px;
     padding: 20px;
-    /* background: #f1f1f1; */
-}
+} 
 
 .line{
     width: 100px;
@@ -505,46 +498,46 @@ body{
     justify-content: center;
     align-items: center;
     color: rgb(173, 162, 162);
-    width: 70%;
+    width: 80%;
     text-align: center;
-    margin-left: 15%;
+    line-height: 1.5em;
 }
 
 .siximg{
-    margin-top: 100px;
+    margin: 50px;
+    background-image: url(/photos/siximg.png);
+    background-position: 0% 52%;
+    background-size: cover;
     width: 80%;
     height: 500px;
-    background-image: url(/photos/siximg.png);
-    background-size: cover;
-    background-position: 0% 52%;
-    border-radius: 25px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 10%;
-    
+    justify-content: center; 
+    align-items: center; 
 }
 
-.playbutton{
+/* progress{
+    width: 50%;
+    height: 7px;
+    background-color: #f1f1f1;
+    overflow: hidden;
+    margin: -50px;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #f1f1f1;
+}
+
+progress::-webkit-progress-value {
+    background-color: #ff0000;
+} */
+
+#six .siximgbtn {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 47%;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
-.siximg .bar{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    width: 80%;
-    height: 3px;
-    background-color: white;
 }
 
 .siximgbtn{
-    
     background: transparent;
     border: 1px solid white;
     padding: 10px 20px;
@@ -553,96 +546,116 @@ body{
     font-size: 16px;
     cursor: pointer;
     margin: 50px;
-    display: flex;
-    margin-left: 45%;
 
 }
 
 #six{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background : linear-gradient(to right, #20242c, #2c0e13);
 }
 
 
-
-#client-reviews{
+#client-reviews {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     padding: 20px;
+    flex-wrap: wrap; 
 }
 
-.line{
+.line {
     width: 100px;
     height: 2px;
     background: white;
 }
 
-#client-reviews h2{
+#client-reviews h2 {
     color: white;
     font-size: 30px;
     font-weight: normal;
-    line-height: 100px;
-
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 
-.clientclass{
-    width: 300px;
-    height: 450px;
-    background: linear-gradient(to left , #384146, #521f16);
-    border-radius: 2px 10px;
-    color: white;
-    gap: 30px;
+.mainreview {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
     flex-wrap: wrap;
-    padding: 10px;
-    /* flex-direction: column; */
+
+}
+
+/* Review Card */
+.mainreview .review {
+    width: 350px;
+    height: 550px;
+    margin: 10px;
+    background: linear-gradient(to left, #384146, #521f16);
+    border-radius: 12px;
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.mainreview .review:hover {
+    transform: scale(1.02);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
 
-.clientclass .ttl{
+.mainreview .review .first{
+    font-size: 2.5em;
     font-style: italic;
-    font-size: 30px;
-    letter-spacing: 2px;
-    padding-left: 10px;
-
+    padding: 20px;
 }
 
-.clientclass .dsc{
-    font-size: 16px;
-    padding: 0 10px;
-    line-height: 20px;
-    color: rgb(205, 202, 202);
+.mainreview .review .second{
+    font-size: 1.2em;
+    padding: 20px;
+    color: #b9bcc2;
 }
 
-.clientclass .who .userdtl{
+.mainreview .review .third{
+    font-size: 1.5em;
+    padding: 20px 0 0  20px ;
+}
+
+.mainreview .review .fourth{
+    font-size: 1.2em;
+    color: #b9bcc2;
+    padding: 0 0 0  20px ;
+}
+
+.mainreview .review .fifth{
+    font-size: 3em;
+    padding: 0 20px ;
+    color: #ff9800;
+}
+
+.mainreview .review img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    /* margin-left: 220px; */
+}
+.mainreview .review .user{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+}
+.mainreview .review .user-info{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
-    gap: 10px;
-}
-
-.clientclass .userimg{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-}
-
-.clientclass .who .name{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.clientclass .who .city{
-    font-size: 16px;
-    color: rgb(205, 202, 202);
-}
-
-.clientclass .who .rating{
-    color: rgb(255, 136, 0);
-    font-size: 40px;
+    gap: 5px;
+    margin: 20px 20px 20px 0;
 }
