--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 /* General Reset */
-
 .heading {
     color: rgb(255, 255, 255);
     display: inline-block;
@@ -9,38 +8,32 @@
     margin: 30px 0;
     position: relative;
     text-align: center;
-  }
-  
-  .heading::before,
-  .heading::after {
+}
+.heading::before,
+.heading::after {
     border-bottom: 2px solid rgb(255, 255, 255);
     content: "";
     position: absolute;
     top: 50%;
     width: 90px;
-  }
-  
-  .heading::before {
+}
+.heading::before {
     margin-right: 10px;
     right: 100%;
-  }
-  
-  .heading::after {
+}
+.heading::after {
     left: 100%;
     margin-left: 10px;
-  }
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
-
-body{
+body {
     background-color: black;
 }
-
-
 /* Navbar Container */
 .navbar {
     position: fixed;
@@ -50,29 +43,22 @@ body{
     justify-content: space-around;
     background: linear-gradient(to right, #20242c, #2c0e13);
     padding: 20px;
-    /* position: fixed; */
 }
-
 /* Logo */
 .navbar .logo img {
     width: auto;
     height: 75px;
     cursor: pointer;
-
 }
-
-
 /* Search Bar */
 .search-container {
     display: flex;
-    /* align-items: center; */
     background: #ffffff;
-    border-radius: 0px 15px 15px 0px ;
+    border-radius: 0px 15px 15px 0px;
     padding: 5px;
     flex: 1;
     width: 100%;
 }
-
 .dropdown-btn {
     background: #d9d9d9;
     border: none;
@@ -82,14 +68,10 @@ body{
     font-size: 14px;
     font-weight: bold;
 }
-
-
-.search-bar2{
+.search-bar2 {
     display: flex;
     flex: 0.5;
 }
-
-
 .search-container input {
     flex: 1;
     border: none;
@@ -97,7 +79,6 @@ body{
     padding: 8px;
     font-size: 16px;
 }
-
 .search-btn {
     background: #ffffff;
     border: none;
@@ -106,26 +87,22 @@ body{
     padding: 4px;
     color: #333;
 }
-
 /* User & Cart */
 .user-cart {
     display: flex;
     gap: 20px;
     color: white;
 }
-
 .user-cart p {
     display: flex;
     align-items: center;
     gap: 5px;
     font-size: 16px;
 }
-
 .user-cart i {
     font-size: 18px;
     cursor: pointer;
 }
-
 /* Navigation Links */
 .nav-links {
     position: fixed;
@@ -135,7 +112,6 @@ body{
     background: linear-gradient(to right, #20242c, #2c0e13);
     padding: 10px 0;
 }
-
 .nav-links a {
     color: white;
     text-decoration: none;
@@ -144,76 +120,60 @@ body{
     flex: 0.1;
     font-weight: bold;
 }
-
 .nav-links a:hover {
     color: #ff9800;
 }
-
 /* Responsive */
 @media (max-width: 768px) {
     .navbar {
         flex-direction: column;
         gap: 15px;
     }
-
     .search-container {
         width: 100%;
     }
-
     .nav-links {
         flex-direction: column;
         gap: 10px;
     }
-
     .nav-links a {
         width: 100%;
         text-align: center;
     }
-
 }
-
-.img2{
+.img2 {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
-#bestseller{
-    /* height: 500px;
-    width: 500px; */
+#bestseller {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     padding: 20px;
 }
-
-.line{
+.line {
     width: auto;
     height: auto;
     background: white;
 }
-
-#bestseller h2{
+#bestseller h2 {
     text-align: center;
     color: white;
     font-size: 30px;
     font-weight: normal;
-
 }
-
-.thirdimg{
+.thirdimg {
     display: flex;
     align-items: center;
-    margin: auto; 
+    margin: auto;
     border-radius: 25px;
     position: relative;
     width: 100%;
     max-width: 1170px;
-    
 }
-
-.option{
+.option {
     width: 100%;
     max-width: 1170px;
     margin: auto;
@@ -221,23 +181,20 @@ body{
     position: absolute;
     justify-content: space-around;
     align-items: center;
-    
 }
-.thirdimg img{
+.thirdimg img {
     width: 100%;
     height: 250px;
     object-fit: cover;
     border-radius: 25px;
 }
-
-.thirdimg p{
+.thirdimg p {
     max-width: 50px;
     color: white;
     font-size: 40px;
     font-weight: normal;
 }
-
-.thirdimg button{
+.thirdimg button {
     background: transparent;
     border: 1px solid white;
     padding: 10px 20px;
@@ -245,19 +202,15 @@ body{
     color: white;
     font-size: 16px;
     cursor: pointer;
-    
-
 }
-
-.cards-for-protien-box{ 
+.cards-for-protien-box {
     display: flex;
     justify-content: center;
     gap: 20px;
-    flex-wrap: wrap; /* Makes it responsive */
+    flex-wrap: wrap;
     padding: 20px;
- }  
-
-.cards{
+}
+.cards {
     background: white;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -267,14 +220,12 @@ body{
     height: 400px;
     transition: transform 0.3s;
 }
-
-.cards img{
+.cards img {
     width: 100%;
     height: 55%;
     border-radius: 10px;
 }
-
-.cards .prices{
+.cards .prices {
     line-height: 50px;
     gap: 18px;
     font-weight: bold;
@@ -283,199 +234,37 @@ body{
     justify-content: center;
     align-items: center;
 }
-
-.cards .prices .preprice{
+.cards .prices .preprice {
     color: rgb(202, 192, 192);
     text-decoration: line-through;
     font-size: 16px;
 }
-
-.cards .prices .postprice{
+.cards .prices .postprice {
     color: black;
     font-size: 24px;
 }
-
-.cards .prices .discount{
+.cards .prices .discount {
     color: rgb(255, 136, 0);
     font-size: 16px;
 }
-
-
-
-#hotdeals{
+#pro-fitness-products {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 20px;
     padding: 20px;
 }
-
-.line{
+.line {
     width: 100px;
     height: 2px;
     background: white;
 }
-
-#hotdeals h2{
+#pro-fitness-products h2 {
     color: white;
     font-size: 30px;
     font-weight: normal;
     line-height: 100px;
-
 }
-
-
-.cards-for-protien-box{ 
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap; /* Makes it responsive */
-    padding: 20px;
- }  
-
-.cards{
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 8px;
-    text-align: center;
-    width: 250px;
-    height: 400px;
-    transition: transform 0.3s;
-}
-
-.cards img{
-    width: 100%;
-    height: 55%;
-    border-radius: 10px;
-}
-
-.cards .prices{
-    line-height: 50px;
-    gap: 18px;
-    font-weight: bold;
-    color: #2c0e13;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.cards .prices .preprice{
-    color: rgb(202, 192, 192);
-    text-decoration: line-through;
-    font-size: 16px;
-}
-
-.cards .prices .postprice{
-    color: black;
-    font-size: 24px;
-}
-
-.cards .prices .discount{
-    color: rgb(255, 136, 0);
-    font-size: 16px;
-}
-
-
-
-#hotdeals{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* flex-direction: column; */
-    gap: 20px;
-    padding: 20px;
-    /* background: #f1f1f1; */
-}
-
-.line{
-    width: 100px;
-    height: 2px;
-    background: white;
-}
-
-#hotdeals h2{
-    color: white;
-    font-size: 30px;
-    font-weight: normal;
-    line-height: 100px;
-
-}
-
-.cards-for-protien-box{ 
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap; /* Makes it responsive */
-    padding: 20px;
- }  
-
-.cards{
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 8px;
-    text-align: center;
-    width: 250px;
-    height: 400px;
-    transition: transform 0.3s;
-}
-
-.cards img{
-    width: 100%;
-    height: 55%;
-    border-radius: 10px;
-}
-
-.cards .prices{
-    line-height: 50px;
-    gap: 18px;
-    font-weight: bold;
-    color: #2c0e13;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.cards .prices .preprice{
-    color: rgb(202, 192, 192);
-    text-decoration: line-through;
-    font-size: 16px;
-}
-
-.cards .prices .postprice{
-    color: black;
-    font-size: 24px;
-}
-
-.cards .prices .discount{
-    color: rgb(255, 136, 0);
-    font-size: 16px;
-}
-
-
- #pro-fitness-products{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-} 
-
-.line{
-    width: 100px;
-    height: 2px;
-    background: white;
-}
-
-#pro-fitness-products h2{
-    color: white;
-    font-size: 30px;
-    font-weight: normal;
-    line-height: 100px;
-
-}
-
-.prodetails{
+.prodetails {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -484,7 +273,6 @@ body{
     text-align: center;
     line-height: 1.5em;
 }
-
 .siximg{
     margin: 50px;
     background-image: url(/photos/siximg.png);
@@ -496,30 +284,7 @@ body{
     justify-content: center; 
     align-items: center; 
 }
-
-/* progress{
-    width: 50%;
-    height: 7px;
-    background-color: #f1f1f1;
-    overflow: hidden;
-    margin: -50px;
-}
-
-progress::-webkit-progress-bar {
-    background-color: #f1f1f1;
-}
-
-progress::-webkit-progress-value {
-    background-color: #ff0000;
-} */
-
-#six .siximgbtn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.siximgbtn{
+.siximgbtn {
     background: transparent;
     border: 1px solid white;
     padding: 10px 20px;
@@ -528,17 +293,32 @@ progress::-webkit-progress-value {
     font-size: 16px;
     cursor: pointer;
     margin: 50px;
-
 }
 
-#six{
+#six .siximgbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.siximgbtn {
+    background: transparent;
+    border: 1px solid white;
+    padding: 10px 20px;
+    border-radius: 35px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 50px;
+}
+
+#six {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background : linear-gradient(to right, #20242c, #2c0e13);
+    background: linear-gradient(to right, #20242c, #2c0e13);
 }
-
 
 #client-reviews {
     display: flex;
@@ -546,7 +326,7 @@ progress::-webkit-progress-value {
     align-items: center;
     gap: 20px;
     padding: 20px;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
 }
 
 .line {
@@ -562,17 +342,14 @@ progress::-webkit-progress-value {
     text-align: center;
 }
 
-
 .mainreview {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 20px;
     flex-wrap: wrap;
-
 }
 
-/* Review Card */
 .mainreview .review {
     width: 350px;
     height: 550px;
@@ -590,33 +367,32 @@ progress::-webkit-progress-value {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-
-.mainreview .review .first{
+.mainreview .review .first {
     font-size: 2.5em;
     font-style: italic;
     padding: 20px;
 }
 
-.mainreview .review .second{
+.mainreview .review .second {
     font-size: 1.2em;
     padding: 20px;
     color: #b9bcc2;
 }
 
-.mainreview .review .third{
+.mainreview .review .third {
     font-size: 1.5em;
-    padding: 20px 0 0  20px ;
+    padding: 20px 0 0 20px;
 }
 
-.mainreview .review .fourth{
+.mainreview .review .fourth {
     font-size: 1.2em;
     color: #b9bcc2;
-    padding: 0 0 0  20px ;
+    padding: 0 0 0 20px;
 }
 
-.mainreview .review .fifth{
+.mainreview .review .fifth {
     font-size: 3em;
-    padding: 0 20px ;
+    padding: 0 20px;
     color: #ff9800;
 }
 
@@ -625,56 +401,50 @@ progress::-webkit-progress-value {
     height: 100px;
     border-radius: 50%;
     border: 2px solid #fff;
-    /* margin-left: 220px; */
 }
-.mainreview .review .user{
+
+.mainreview .review .user {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
-
 }
-.mainreview .review .user-info{
+
+.mainreview .review .user-info {
     display: flex;
     flex-direction: column;
     gap: 5px;
     margin: 20px 20px 20px 0;
 }
 
-.insta{
+.insta {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 70px;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
 }
 
-.insta .instafeed{
+.insta .instafeed {
     font-size: 30px;
     color: white;
     font-weight: bold;
 }
 
-.insta .username{
+.insta .username {
     font-size: 1em;
     color: white;
 }
+
 .gridimg {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Responsive Grid */
-    gap: 5px;
-    padding: 10px;
-}
-.gridimg {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive Columns */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2px;
     justify-content: center;
     align-items: center;
 }
 
-/* All images */
 .gridimg img {
     object-fit: cover;
     width: 100%;
@@ -682,12 +452,10 @@ progress::-webkit-progress-value {
     transition: transform 0.3s ease-in-out;
 }
 
-/* Hover Effect */
 .gridimg img:hover {
     transform: scale(1.04);
 }
 
-/* First Image (Bigger One) */
 .gridimg .grid1 {
     grid-column: span 2;
     grid-row: span 2;
@@ -695,18 +463,16 @@ progress::-webkit-progress-value {
     height: 100%;
 }
 
-/* ✅ Responsive Design */
 @media (max-width: 1024px) {
     .gridimg {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Tablet size */
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 }
 
 @media (max-width: 768px) {
     .gridimg {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Mobile size */
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
-
     .gridimg .grid1 {
         grid-column: span 1;
         grid-row: span 1;
@@ -714,25 +480,23 @@ progress::-webkit-progress-value {
     }
 }
 
-.parah{
+.parah {
     color: rgb(203, 198, 198);
     font-size: 20px;
     flex-direction: column;
     width: 80%;
     margin-left: 10%;
-    padding : 50px 0 0 50px;
+    padding: 50px 0 0 50px;
 }
 
-.parah .bold{
+.parah .bold {
     font-weight: bold;
     color: white;
     font-size: 30px;
     padding: 30px 0 30px 0;
 }
-/* new footer here -------------- */
-/* footer area */ 
 
-.mainfooter{
+.mainfooter {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -744,17 +508,16 @@ progress::-webkit-progress-value {
     margin: 100px 0 0 0;
     padding-top: 100px;
     gap: 20px;
-
 }
-.footer{
+
+.footer {
     display: flex;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: center;
     height: auto;
     width: 100%;
     gap: 20px;
-} 
-
+}
 
 .footer .footerlogo {
     width: auto;
@@ -763,54 +526,50 @@ progress::-webkit-progress-value {
     cursor: pointer;
 }
 
-.link .name{
+.link .name {
     font-size: 1.5em;
     color: white;
 }
 
-
-.link li{
+.link li {
     list-style: none;
     font-size: 1em;
 }
 
-.link li a{
+.link li a {
     text-decoration: none;
-    color: grey; 
+    color: grey;
     font-size: 1.2em;
-
 }
 
-.community .name{
+.community .name {
     font-size: 1.5em;
     color: white;
 }
 
- .link .size{
+.link .size {
     font-size: 1.2em;
 }
 
-
- .link li a:hover{
+.link li a:hover {
     color: white;
 }
 
-
-.community{
+.community {
     display: flex;
     flex-direction: column;
     max-width: 400px;
     width: 100%;
     flex-wrap: wrap;
+}
 
- }
-
- .emaildiv-link{
+.emaildiv-link {
     display: flex;
     justify-content: space-between;
     padding-top: 35px;
 }
-.email{
+
+.email {
     border: none;
     background-color: transparent;
     padding: 4px;
@@ -820,61 +579,55 @@ progress::-webkit-progress-value {
     color: white;
     font-size: 16px;
 }
-.email-icon{
+
+.email-icon {
     background-color: transparent;
     color: white;
     border: none;
     cursor: pointer;
     font-size: 1.4em;
-    /* position: absolute; */
-
-    
 }
-.socialmedia{
+
+.socialmedia {
     background-color: transparent;
     color: white;
     border: none;
-    
 }
-.socialmedia i{
+
+.socialmedia i {
     font-size: 2em;
-    margin: 20px 20px 0 0px;
-    
+    margin: 20px 20px 0 0;
     cursor: pointer;
-
 }
 
-
-
- @media (max-width: 768px) {
+@media (max-width: 768px) {
     .footer {
         flex-direction: column;
         align-items: center;
-    } }
+    }
+}
 
-
-
-.lastline{
+.lastline {
     width: 100%;
     max-width: 1600px;
     border: 1px solid grey;
     height: 1px;
     margin-top: 50px;
-    
 }
 
-.services{
+.services {
     display: flex;
     justify-content: center;
 }
-.services li{
+
+.services li {
     list-style: none;
     color: white;
     font-size: 1em;
     padding: 30px;
 }
 
-.copyright{
+.copyright {
     color: white;
     font-size: 1em;
 }
