--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,4 @@
-/* General Reset */
-.heading {
-    color: rgb(255, 255, 255);
-    display: inline-block;
-    font-size: 2em;
-    font-weight: 600;
-    letter-spacing: 3px;
-    margin: 30px 0;
-    position: relative;
-    text-align: center;
-}
-.heading::before,
-.heading::after {
-    border-bottom: 2px solid rgb(255, 255, 255);
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 90px;
-}
-.heading::before {
-    margin-right: 10px;
-    right: 100%;
-}
-.heading::after {
-    left: 100%;
-    margin-left: 10px;
-}
+
 * {
     margin: 0;
     padding: 0;
@@ -36,7 +10,9 @@ body {
 }
 /* Navbar Container */
 .navbar {
-    position: fixed;
+    z-index: 1;
+position: sticky;
+top: 0px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -105,7 +81,9 @@ body {
 }
 /* Navigation Links */
 .nav-links {
-    position: fixed;
+    z-index: 1;
+    position: sticky;
+    top: 100px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -140,6 +118,11 @@ body {
         width: 100%;
         text-align: center;
     }
+    
+.link{
+    width: 100%;
+    /* justify-content: none; */
+}
 }
 .img2 {
     width: 100%;
@@ -153,16 +136,12 @@ body {
     gap: 20px;
     padding: 20px;
 }
-.line {
-    width: auto;
-    height: auto;
-    background: white;
-}
 #bestseller h2 {
     text-align: center;
     color: white;
     font-size: 30px;
     font-weight: normal;
+    max-width: 120px;
 }
 .thirdimg {
     display: flex;
@@ -329,11 +308,6 @@ body {
     flex-wrap: wrap;
 }
 
-.line {
-    width: 100px;
-    height: 2px;
-    background: white;
-}
 
 #client-reviews h2 {
     color: white;
@@ -405,16 +379,50 @@ body {
 
 .mainreview .review .user {
     display: flex;
-    align-items: center;
     justify-content: center;
-    gap: 10px;
+    align-items:center;
+    padding: 10px;
 }
 
 .mainreview .review .user-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
+    justify-content: baseline;
+    flex: 1;
     gap: 5px;
-    margin: 20px 20px 20px 0;
+}
+
+.secondclassimg{
+    height: 
+    width:
+}
+
+
+.heading {
+    color: rgb(255, 255, 255);
+    /* display: inline-block; */
+    font-size: 2em;
+    font-weight: 600;
+    letter-spacing: 3px;
+    margin: 30px 0;
+    position: relative;
+    text-align: center;
+}
+.heading::before,
+.heading::after {
+    border-bottom: 2px solid rgb(255, 255, 255);
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 90px;
+}
+.heading::before {
+    margin-right: 10px;
+    right: 100%;
+}
+.heading::after {
+    left: 100%;
+    margin-left: 10px;
 }
 
 .insta {
@@ -422,7 +430,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 70px;
+    padding: 70px 0;
     flex-wrap: wrap;
 }
 
@@ -502,7 +510,6 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: auto;
     width: 100%;
     background: linear-gradient(to right, #20242c, #2c0e13);
     margin: 100px 0 0 0;
@@ -514,9 +521,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: auto;
     width: 100%;
     gap: 20px;
+    padding: 10px;
+}
+@media screen  {
+    
 }
 
 .footer .footerlogo {
@@ -567,15 +577,17 @@ body {
     display: flex;
     justify-content: space-between;
     padding-top: 35px;
+    border-bottom: 1px solid white;
+
 }
 
 .email {
+    outline: none;
     border: none;
     background-color: transparent;
     padding: 4px;
     width: 100%;
     max-width: 400px;
-    border-bottom: 1px solid white;
     color: white;
     font-size: 16px;
 }
@@ -617,6 +629,7 @@ body {
 
 .services {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
